

***************************************************************************
3.0.0-yb-1
 * Add load balancing policy for YugaByte

2.5.0
 * LTS Release for Spark 2.4

3.0.0-Alpha2 (Included in 2.5.0)
 * Add ReadConf Parameter to JoinWithCassandraTable Methods (SPARKC-570)
 * Change Dse Prefixed Parameters (SPARKC-575)
 * Update Reference Docs (SPARKC-574)
 * Re-enable Travis CI (SPARKC-573)
 * Control when resolution of Contact Points Occurs (SPARKC-571)


3.0.0-Alpha (Included in 2.5.0)
  * Include all DS Specific Features
     * Includes CassandraHiveMetastore
     * Structured Streaming Sink Support
     * DirectJoin Catalyst Optimziation
     * Ttl and Writetime functions for Dataframes
     * Astra and Java Driver 4.0 Support
     * InJoin Optimizations
     * Read Throttle
     * Continuous Paging For DSE Clusters
     * More

*******************************************************************************

2.4.3
  * Fix issue with Hadoop3 Compatibility

2.4.2
  * Support for Scala 2.12 (SPARKC-458)

2.4.1
 * Includes all up to 2.3.3

2.4.0
 * Support for Spark 2.4

********************************************************************************

2.3.3
 * Includes all patches up to 2.0.11

2.3.2
 * Includes all patches up to 2.0.10

2.3.1
 * Includes all patches up to 2.0.9

2.3.0
 * Support for Spark 2.3.0 (SPARKC-530)
 * Pushdown filter for composite partition keys doesn't work (SPARKC-490)
 * Removal of Scala-2.10 support

********************************************************************************

2.0.11
 * Added case in StringConverter to properly output InetAddress (SPARKC-559)
 * Added java.time.Instant -> java.util.Date conversion (SPARKC-560)
 * RegularStatements not Cached by SessionProxy (SPARKC-558)
 * Fix CassandraSourceRelation Option Parsing in Spark 2.0 (SPARKC-551)

2.0.10
 * Includes all patches up to 1.6.13

2.0.9
 * Includes all patches up to 1.6.12

2.0.8
 * Allow non-cluster prefixed options in sqlConf (SPARKC-531)